Start creation of fully typed commands in GitConnector to never again miss any case that can be produced by Git (this is a rough statement!)